overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -341,6 +341,7 @@ img {
 #titleContainerContent2 {
   width: 100%;
   height: 45vh;
+  overflow-y: auto;
 
   display: flex;
   flex-direction: row;
